유저정보 조회 변경
